refactor: migrate discrete-agent into ts-boilerplate (#2)
* refactor: migrate discrete-agent into ts-boilerplate

* fix: package-lock.json

* fix: default json format compatability

* fix: default json format compatability

* fix: apply pr notes

* fix: pr notes
